# k7z

./: .gitignore  Cargo.toml  Makefile  README.md  roadmap.md
.github/: release.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/k7z-cli/: Cargo.toml
crates/k7z-cli/src/: main.rs
crates/k7z-common/: Cargo.toml
crates/k7z-common/src/: lib.rs
crates/k7z-core/: Cargo.toml
crates/k7z-core/src/: lib.rs
crates/k7z-core/tests/: e2e.rs
crates/k7z-crypto/: Cargo.toml
crates/k7z-crypto/src/: lib.rs
crates/k7z-format-7z/: Cargo.toml
crates/k7z-format-7z/src/: lib.rs
crates/k7z-format-tar/: Cargo.toml
crates/k7z-format-tar/src/: lib.rs
crates/k7z-format-zip/: Cargo.toml
crates/k7z-format-zip/src/: lib.rs
crates/k7z-format-zstd/: Cargo.toml
crates/k7z-format-zstd/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/detect_format/: extensions.txt  mixed_paths.txt
fuzz/corpus/tar_list/: sample.tar
fuzz/corpus/zstd_list/: sample.zst
fuzz/fuzz_targets/: detect_format.rs  safe_join.rs  tar_list.rs  zip_list.rs  zstd_list.rs
scripts/: compat-corpus.sh  fuzz-triage.sh
