[package]
name = "k7z-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
k7z-common = { path = "../crates/k7z-common" }
k7z-format-tar = { path = "../crates/k7z-format-tar" }
k7z-format-zip = { path = "../crates/k7z-format-zip" }
k7z-format-zstd = { path = "../crates/k7z-format-zstd" }

[[bin]]
name = "safe_join"
path = "fuzz_targets/safe_join.rs"
test = false
doc = false
bench = false

[[bin]]
name = "detect_format"
path = "fuzz_targets/detect_format.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zip_list"
path = "fuzz_targets/zip_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tar_list"
path = "fuzz_targets/tar_list.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zstd_list"
path = "fuzz_targets/zstd_list.rs"
test = false
doc = false
bench = false
