[package]
name = "k7z-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
k7z-common = { path = "../k7z-common" }
k7z-format-7z = { path = "../k7z-format-7z" }
k7z-format-tar = { path = "../k7z-format-tar" }
k7z-format-zip = { path = "../k7z-format-zip" }
k7z-format-zstd = { path = "../k7z-format-zstd" }
tempfile = "3.14.0"
